--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          <nav class="navbar navbar-light navbar-expand-sm fixed-top nav-transparente">
             <div class="container">
                <a href="" class="navbar-brand text-white">
-                 <h4><img src="img/logo-js-white.png" width="30"> Soluções em TI</h4>
+                 <h4><img src="img/logo-js-white.png" width="30"> Joselino Santos</h4>
                </a>
                <button class="navbar-toggler" data-toggle="collapse" data-target="#nav-main">
                <span class="navbar-toggler-icon"></span>
@@ -29,7 +29,6 @@
                   <ul class="navbar-nav ml-auto">
                      <li class="nav-item"><a href="#sobre" class="nav-link">Sobre</a></li>
                      <li class="nav-item"><a href="#projetos" class="nav-link">Projetos</a></li>
-                     <li class="nav-item"><a href="#servicos" class="nav-link">Serviços</a></li>
                      <li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
                      <li class="nav-item"><a href="#contatos" class="nav-link">Contatos</a></li>
                   </ul>
@@ -47,10 +46,10 @@
                   <div class="align-self-center">
                      <h2>Olá, bem vindo(a)</h2>
                      <h3>Eu sou o Joselino Santos. </h3>
-                     <h3 class="mt-3">FULL STACK WEB DEVELOPER</h3>
+                     <h3 class="mt-3">ANALISTA EM DESENVOLVIMENTO DE SISTEMAS</h3>
                      <p class="lead">Sou graduado em Redes de computadores.</p>
-                     <p class="lead">Já prestei serviço para empresas, pessoas e órgãos públicos. Observando a demanda por aplicações de qualidade, entrei nessa seara para oferecer esse serviço para pequenas empresas e pessoas físicas.
-                        Meu objetivo é ajudar você migrar sua empresa física para digital ou aumentar os resultados com as mais modernas soluções.
+                     <p class="lead">Já prestei serviço para empresas, pessoas e órgãos públicos. Atualmente trabalho no SERPRO.
+                        Meu objetivo é compartilhar conhecimento e ajudar a comunidade.
                      </p>
                      <a href="" class="btn btn-outline-light btn-lg btn-custom mt-3">SAIBA MAIS</a>
                   </div>
@@ -131,33 +130,7 @@
          </div>
       </section>
 
-      <section id="servicos" class="caixa text-white">
-         <div class="container text-center">
-            <div class="mb-5">
-               <h2>SERVIÇOS E SOLUÇÕES</h2>
-               <h4>Alguns dos serviços que ofereço</h4>
-            </div>
-            <div class="row">
-               <div class="col-md-4">
-                  <img src="img/sites.png" width="250" class="img-fluid">
-                  <h3>Páginas Web</h3>
-                  <p class="lead">Landing pages, Blogs, sites, página de vendas e muito mais.</p>
-               </div>
-               <div class="col-md-4">
-                  <img src="img/ecommerce.png" class="img-fluid">
-                  <h3>Ecommerce</h3>
-                  <p class="lead">Sua loja completa com área de administração fácil para você se concentrar em ganhar dinheiro. </p>
-               </div>
-               <div class="col-md-4">
-                  <img src="img/analytics.png" width="250" class="img-fluid">
-                  <h3>Web Analytics</h3>
-                  <p class="lead">Os dados do seu site agora podem fazer sentido e trabalharem para você. </p>
-               </div>
-            </div>
-         </div>
-      </section>
-
-      <section id="posts" class="bg-light caixa">
+      <section id="posts" class="text-white caixa">
          <div class="container text-center">
             <div class="mb-5">
                <h2>POSTS RECENTES</h2>
@@ -186,37 +159,7 @@
                   </div>
                </div>
             </div>
-            <a href="" class="btn btn-outline-dark btn-lg btn-black btn-custom mt-3">Ver todos os posts</a>
-         </div>
-      </section>
-
-      <section id="contatos" class="caixa">
-         <div class="container text-center">
-            <div class="mb-5">
-               <h2>Contatos</h2>
-               <h4>Envie sua mensagem e vamos tirar seu projeto do papel</h4>
-            </div>
-            <form action="" method="">
-               <div class="row">
-                  <div class="col-6">
-                     <input class="form-control" type="text" name="nome" placeholder="Seu nome">
-                  </div>
-                  <div class="col-6">
-                     <input class="form-control" type="email" name="email" placeholder="Seu e-mail">
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-md-6">
-                     <input class="form-control" type="text" name="telefone" placeholder="Seu telefone">
-                  </div>
-               </div>
-               <div class="row">
-                  <div class="col-md-12">
-                     <textarea class="form-control" name="mensagem" placeholder="Escreva sua mensagem"></textarea>
-                  </div>
-               </div>
-               <button class="btn btn-outline-light btn-custom" type="submit">Enviar </button>
-            </form>
+            <a href="" class="btn btn-outline-light btn-lg btn-custom mt-3">VER MAIS</a>
          </div>
       </section>
 
@@ -224,14 +167,13 @@
          <div class="container text-white">
             <div class="row">
                <div class="col-md-2">
-                  <h4>JS Soluções Digitais</h4>
+                  <h4>Joselino Santos</h4>
                </div>
                <div class="col-md-2">
                   <h4>Links</h4>
                   <ul class="navbar-nav">
                      <li><a href="#sobre">Sobre</a></li>
                      <li><a href="#projetos">Projetos</a></li>
-                     <li><a href="#solucoes">Soluções</a></li>
                      <li><a href="blog.html">Blog</a></li>
                   </ul>
                </div>
